--- a/Nutricionista/nbproject/private/private.properties
+++ b/Nutricionista/nbproject/private/private.properties
@@ -1,2 +1,12 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\IK\\AppData\\Roaming\\NetBeans\\22\\build.properties
+do.depend=false
+do.jar=true
+do.jlink=false
+file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Mayra\\Documents\\GitHub\\nutricion_final\\Nutricionista\\lib
+file.reference.mariadb-java-client-3.1.4.jar=C:\\Users\\Mayra\\Documents\\GitHub\\nutricion_final\\Nutricionista\\lib
+file.reference.mariadb-java-client-3.3.3.jar=C:\\Users\\Mayra\\Documents\\GitHub\\nutricion_final\\Nutricionista\\lib
+file.reference.mysql-connector-java-5.1.45.jar=C:\\Users\\Mayra\\Documents\\GitHub\\nutricion_final\\Nutricionista\\lib
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\Mayra\\AppData\\Roaming\\NetBeans\\17\\build.properties
