--- a/Nutricionista/nbproject/project.properties
+++ b/Nutricionista/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Nutricionista
+application.vendor=Mayra
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,11 +33,12 @@ dist.jar=${dist.dir}/Nutricionista.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Nutricionista
+endorsed.classpath=
 excludes=
-file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\IK\\Documents\\GitHub\\Transversal\\Libraries\\mariadb-java-client-2.3.0.jar
 file.reference.mariadb-java-client-3.1.4.jar=C:\\Users\\IK\\Documents\\GitHub\\Transversal\\Libraries\\mariadb-java-client-3.1.4.jar
 file.reference.mariadb-java-client-3.3.3.jar=C:\\Users\\IK\\Documents\\GitHub\\Transversal\\Libraries\\mariadb-java-client-3.3.3.jar
 file.reference.mysql-connector-java-5.1.45.jar=C:\\Users\\IK\\Documents\\GitHub\\Transversal\\Libraries\\mysql-connector-java-5.1.45.jar
+file.reference.Nutricionista-lib=lib
 includes=**
 jar.compress=false
 javac.classpath=\
