--- a/Nutricionista/nbproject/project.properties
+++ b/Nutricionista/nbproject/project.properties
@@ -94,7 +94,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Nutricionista
-main.class=nutricionista.Nutricionista
+main.class=Vista.Nutricionista
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
