--- a/Nutricionista/nbproject/project.properties
+++ b/Nutricionista/nbproject/project.properties
@@ -89,7 +89,10 @@ javac.classpath=\
     ${file.reference.mariadb-java-client-3.4.1.jar}:\
     <<<<<<< Updated upstream:\
     ${file.reference.mariadb-java-client-3.4.1.jar-1}:\
-<<<<<<< Updated upstream
+    <<<<<<< Updated upstream:\
+    ${file.reference.AbsoluteLayout.jar-1}:\
+    ${file.reference.mariadb-java-client-3.4.1.jar-2}:\
+    ${file.reference.mysql-connector-j-8.0.33.jar-1}
     ${file.reference.AbsoluteLayout-RELEASE220.jar}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
     ${file.reference.mariadb-java-client-3.4.1.jar-1}:\
