--- a/Nutricionista/nbproject/project.properties
+++ b/Nutricionista/nbproject/project.properties
@@ -46,6 +46,7 @@ file.reference.AbsoluteLayout-RELEASE220.jar=C:\\Users\\Mayra\\Documents\\GitHub
 file.reference.AbsoluteLayout.jar-2=AbsoluteLayout.jar
 file.reference.jcalendar-1.4.jar-2=C:\\Users\\Mayra\\Documents\\GitHub\\nutricion_final\\Nutricionista\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-3=lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-4=jcalendar-1.4.jar
 file.reference.jgoodies-common-1.2.0.jar=lib\\jgoodies-common-1.2.0.jar
 file.reference.jgoodies-looks-2.4.1.jar=lib\\jgoodies-looks-2.4.1.jar
 file.reference.junit-4.6.jar=lib\\junit-4.6.jar
@@ -111,7 +112,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-j-8.0.33.jar-2}:\
     ${file.reference.AbsoluteLayout-RELEASE220.jar}:\
     ${file.reference.mysql-connector-j-8.0.33.jar-3}:\
-    ${file.reference.mysql-connector-java-8.0.17.jar}
+    ${file.reference.mysql-connector-java-8.0.17.jar}:\
+    ${file.reference.jcalendar-1.4.jar-4}
     ${file.reference.AbsoluteLayout-RELEASE220.jar}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
     ${file.reference.mariadb-java-client-3.4.1.jar-1}:\
